--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background: radial-gradient(circle at center, #ffffff 0%, #ffffff 100%); 
-    
+    background: radial-gradient(circle at center, #ffffff 0%, #ffffff 100%);
+
     font-family: 'Courier New', Courier, monospace;
     display: flex;
     flex-direction: column;
@@ -8,92 +8,93 @@ body {
     height: 100vh;
     margin: 0;
 
-  }
-  
-  .nama1 {
+}
+
+.nama1 {
     font-family: sans-serif;
     font-weight: bold;
-  border-radius: 8px;
-   border-style: solid;
-   padding: 10px 10px;
-   font-size: 50px;
-  }
+    border-radius: 8px;
+    border-style: solid;
+    padding: 10px 10px;
+    font-size: 50px;
+}
 
-  
-  
-  .control {
+
+
+.control {
     display: flex;
     gap: 80px;
     margin-top: 60px;
-  }
-  
-  .left {
+}
+
+.left {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
-    
-  }
- .right{
+
+}
+
+.right {
     margin-top: 85px;
- }
-  .left .horiz {
+}
+
+.left .horiz {
     display: flex;
-    gap: 100px; /*utk jarak antar button*/
+    gap: 100px;
     margin: 15px 0;
-  }
-  
-  .btn { 
+}
+
+.btn {
     width: 60px;
     height: 60px;
     margin: 5px;
     font-size: 15px;
-    border-style: solid ;
-    border-color:black;
+    border-style: solid;
+    border-color: black;
     border-width: 1px;
     border-radius: 12px;
     cursor: pointer;
     color: white;
     font-weight: bold;
     transition: transform 0.1s, box-shadow 0.1s, background 0.3s;
-    
-    
-  }
-  
-  .btn.aab {
+
+
+}
+
+.btn.aab {
     background: lightblue;
-    
-  }
-  
-  .btn.bbc {
+
+}
+
+.btn.bbc {
     background: pink;
-  }
-  
-  .btn:hover { 
-    box-shadow: 0 0 10px violet; 
-    color:black;
-  }
-  
-  .btn:active, .btn.pressed { 
-    transform: scale(0.9); 
+}
+
+.btn:hover {
+    box-shadow: 0 0 10px violet;
+    color: black;
+}
+
+.btn:active,
+.btn.pressed {
+    transform: scale(0.9);
     box-shadow: inset 0 0 15px black;
-  }
-  
-  footer {
+}
+
+footer {
     position: absolute;
     bottom: 20px;
     font-size: 13px;
-    
-  }
-  
-  footer a {
+
+}
+
+footer a {
     color: black;
     text-decoration: none;
-  }
-  
-  footer a:hover {
+}
+
+footer a:hover {
     background: red;
     border-radius: 8px;
-    color:black;
-  }
-
- 
+    color: black;
+}
