--- a/style.css
+++ b/style.css
@@ -23,19 +23,25 @@ body {
 
 .control {
     display: flex;
-    gap: 80px;
+
     margin-top: 60px;
+
 }
 
 .left {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    background-color: red;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 .right {
-    margin-top: 85px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: blue;
+    padding-top: 85px;
 }
 
 .left .horiz {
