ubah warna background tombol

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .control {
     display: flex;
-
+    
     margin-top: 60px;
 
 }
@@ -35,6 +35,7 @@ body {
     background-color: red;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    
 }
 
 .right {
@@ -56,7 +57,7 @@ body {
     margin: 5px;
     font-size: 15px;
     border-style: solid;
-    border-color: black;
+    border-color: white;
     border-width: 1px;
     border-radius: 12px;
     cursor: pointer;
@@ -68,19 +69,22 @@ body {
 }
 
 .btn.aab {
-    background: lightblue;
+    background: black;
 
 }
 
 .btn.bbc {
-    background: pink;
+    background:black;
 }
 
-.btn:hover {
-    box-shadow: 0 0 10px violet;
-    color: black;
+.btn.bbc:hover {
+    box-shadow: 0 0 10px white;
+    color: blue;
 }
-
+ .btn.aab:hover{
+    box-shadow: 0 0 10px white;
+    color:red;
+ }
 .btn:active,
 .btn.pressed {
     transform: scale(0.9);
