--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 }
 
 .nama1 {
-    font-family: sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     border-radius: 8px;
     border-style: solid;
+    border-width: 1px;
     padding: 10px 10px;
     font-size: 50px;
 }
@@ -35,6 +36,7 @@ body {
     background-color: red;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    
     
 }
 
@@ -59,7 +61,7 @@ body {
     border-style: solid;
     border-color: white;
     border-width: 1px;
-    border-radius: 12px;
+    border-radius: 100px;
     cursor: pointer;
     color: white;
     font-weight: bold;
